# agent-engineering

./: .gitignore  README.md  pyproject.toml
homework-1/: README.md  database.py  grid.duckdb.wal  sql-agent.ipynb
