[project]
name = "agent-engineering"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "deepeval>=3.1.8",
    "dotenv>=0.9.9",
    "duckdb>=1.3.1",
    "ipykernel>=6.29.5",
    "mistralai>=1.8.2",
    "smolagents[litellm,mlx-lm]>=1.18.0",
    "tqdm>=4.67.1",
]
